--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       <!-- Header -->
       <header id="header">
-        <a href="index.html" class="logo">EMF</a>
+        <a href="index.html" class="logo">SURVEYOR EMF</a>
       </header>
 
       <!-- Nav -->
@@ -37,8 +37,8 @@
         </ul>
         <ul class="icons">
           <!-- Replace # with your links -->
-          <li><a href="https://github.com/yourusername" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-          <li><a href="https://www.linkedin.com/in/your-handle" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+          <li><a href="https://github.com/emmysaxxy" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+          <li><a href="https://www.linkedin.com/in/fajembola-emmanuel" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
         </ul>
       </nav>
 
@@ -49,11 +49,11 @@
         <article class="post featured">
           <header class="major">
             <span class="date">Featured</span>
-            <h2><a href="about.html#proj-street-guide">Urban Street Guide Map</a></h2>
+            <h2><a href="about.html#proj-street-guide">Urban Street Guide Maps</a></h2>
             <p>High-quality cartographic design and geospatial data processing for a city-level street guide,
             optimized for clarity, routing, and field use.</p>
           </header>
-          <a href="images/featured-map.jpg" class="image main"><img src="images/featured-map.jpg" alt="Featured GIS map" /></a>
+          <a href="images/SG_Abakaliki1.png" class="image main"><img src="images/SG_Abakaliki1.png" alt="Featured GIS map" /></a>
           <ul class="actions special">
             <li><a href="about.html#projects" class="button large">See All Projects</a></li>
           </ul>
@@ -63,9 +63,9 @@
         <section class="posts">
           <article>
             <header>
-              <h2><a href="about.html#proj-layout">Survey Layout Setting-Out</a></h2>
+              <h2><a href="about.html#proj-layout">Survey Plans</a></h2>
             </header>
-            <a href="images/layout.jpg" class="image fit"><img src="images/layout.jpg" alt="Survey layout" /></a>
+            <a href="images/Topo.png" class="image fit"><img src="images/Topo.png" alt="Survey layout" /></a>
             <p>Control establishment, stake-out, and QA for site development with precise GNSS workflows.</p>
             <ul class="actions special">
               <li><a href="about.html#proj-layout" class="button">Details</a></li>
@@ -74,9 +74,9 @@
 
           <article>
             <header>
-              <h2><a href="about.html#proj-acresal">ACReSAL Mapping Support</a></h2>
+              <h2><a href="about.html#proj-acresal">Mapping and Analysis</a></h2>
             </header>
-            <a href="images/acresal.jpg" class="image fit"><img src="images/acresal.jpg" alt="ACReSAL mapping" /></a>
+            <a href="LULC_Adamawa.png" class="image fit"><img src="LULC_Adamawa.png" alt="ACReSAL mapping" /></a>
             <p>Geospatial support for land restoration: data capture, cleaning, and visualization.</p>
             <ul class="actions special">
               <li><a href="about.html#proj-acresal" class="button">Details</a></li>
