--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <header>
               <h2><a href="about.html#proj-acresal">Mapping and Analysis</a></h2>
             </header>
-            <a href="LULC_Adamawa.png" class="image fit"><img src="LULC_Adamawa.png" alt="ACReSAL mapping" /></a>
+            <a href="images/LULC_Adamawa.png" class="image fit"><img src="images/LULC_Adamawa.png" alt="ACReSAL mapping" /></a>
             <p>Geospatial support for land restoration: data capture, cleaning, and visualization.</p>
             <ul class="actions special">
               <li><a href="about.html#proj-acresal" class="button">Details</a></li>
@@ -117,3 +117,4 @@
     </script>
   </body>
 </html>
+
