--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       <header id="header">
         <a href="index.html" class="logo">SURVEYOR EMF</a>
       </header>
-
+<a href="#" class="image main"><img src="images/n1.JPG" alt="" /></a>
+      
       <!-- Nav -->
       <nav id="nav">
         <ul class="links">
@@ -117,4 +118,5 @@
     </script>
   </body>
 </html>
+
 
