--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 
       <!-- Header -->
       <header id="header">
-        <a href="index.html" class="logo">EMF</a>
+        <a href="index.html" class="logo">Surv. Emmanuel M. Fajembola</a>
       </header>
 
       <!-- Nav -->
@@ -25,8 +25,8 @@
         </ul>
         <ul class="icons">
           <!-- Replace # with your links -->
-          <li><a href="https://github.com/yourusername" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-          <li><a href="https://www.linkedin.com/in/your-handle" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+          <li><a href="https://github.com/emmysaxxy" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+          <li><a href="https://www.linkedin.com/in/fajembola-emmanuel" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
         </ul>
       </nav>
 
@@ -41,7 +41,7 @@
           </header>
           <div class="image main">
             <!-- Optional: place a professional headshot at images/profile.jpg -->
-            <img src="images/profile.jpg" alt="Emmanuel Mayowa Fajembola" />
+            <img src="images/n1" alt="Emmanuel Mayowa Fajembola" />
           </div>
 
           <h2>Core Skills</h2>
@@ -137,3 +137,4 @@
     </script>
   </body>
 </html>
+
