--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
               <span class="date">Project</span>
               <h2>Urban Street Guide Map</h2>
             </header>
-            <a href="images/street-guide.jpg" class="image fit"><img src="images/street-guide.jpg" alt="Street guide map" /></a>
+            <a href="images/SG_Enugu.png" class="image fit"><img src="images/SG_Enugu.png" alt="Street guide map" /></a>
             <p>City-scale street guide created from multi-source datasets. Tasks included data cleaning, road network generalization, POI integration, and cartographic styling for legibility in print and digital formats.</p>
             <!-- Optional links -->
             <!-- <ul class="actions special"><li><a href="#" class="button">View PDF</a></li></ul> -->
@@ -71,7 +71,7 @@
           <article id="proj-layout">
             <header>
               <span class="date">Project</span>
-              <h2>Survey Layout Setting-Out</h2>
+              <h2>Survey Planst</h2>
             </header>
             <a href="images/layout-detail.jpg" class="image fit"><img src="images/layout-detail.jpg" alt="Layout setting-out" /></a>
             <p>Established control points and executed site stake-out using GNSS and Total Station. Delivered as-built checks and conformance reporting to support construction milestones.</p>
@@ -81,9 +81,9 @@
           <article id="proj-acresal">
             <header>
               <span class="date">Project</span>
-              <h2>ACReSAL Mapping Support</h2>
+              <h2>Mapping & Analysis</h2>
             </header>
-            <a href="images/acresal-detail.jpg" class="image fit"><img src="images/acresal-detail.jpg" alt="ACReSAL mapping support" /></a>
+            <a href="images/Study_Area.png" class="image fit"><img src="images/Study_Area.png" alt="Mapping" /></a>
             <p>Contributed geospatial data capture and visualization for land restoration efforts, including field data workflow design, QA/QC, and web-ready map outputs for stakeholders.</p>
           </article>
         </section>
@@ -96,13 +96,13 @@
           </section>
           <section>
             <h3>Email</h3>
-            <p><a href="mailto:your.email@example.com">your.email@example.com</a></p>
+            <p><a href="mailto:emmanuelfajembola@gmail.com">your.email@example.com</a></p>
           </section>
           <section>
             <h3>Social</h3>
             <ul class="icons alt">
-              <li><a href="https://github.com/yourusername" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-              <li><a href="https://www.linkedin.com/in/your-handle" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+              <li><a href="https://github.com/emmysaxxy" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+              <li><a href="https://www.linkedin.com/in/fajembola-emmanuel" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
             </ul>
           </section>
         </section>
@@ -137,4 +137,5 @@
     </script>
   </body>
 </html>
+
 
