--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
           </header>
           <div class="image main">
             <!-- Optional: place a professional headshot at images/profile.jpg -->
-            <img src="images/n1" alt="Emmanuel Mayowa Fajembola" />
+            <img src="images/n1.JPG" alt="Emmanuel Mayowa Fajembola" />
           </div>
 
           <h2>Core Skills</h2>
@@ -137,5 +137,6 @@
     </script>
   </body>
 </html>
+
 
 
